style(ui): update font colors in product modal and menus, fix overflow issues in dashboard and cart pages

--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@
     --button-hover: #333;
     --placeholder: rgb(255, 255, 255);
     --orange: rgb(228, 88, 44);
+    --green: rgb(22, 168, 120);
     --color-menu: #fff8f0;
 }
 
@@ -136,7 +137,7 @@ header {
 
 .sub-menu-wrap {
     position: absolute;
-    top: 80px;
+    top: 58px;
     right: 21px;
     width: 210px;
     max-height: 0px;
@@ -156,7 +157,7 @@ header {
 }
 
 .sub-menu h3 {
-    color: var(--orange);
+    color: var(--green);
     font-size: smaller;
 }
 
@@ -164,7 +165,7 @@ header {
     border: 0;
     height: 1px;
     width: 100%;
-    background: var(--orange);
+    background: var(--green);
     margin: 15px 0 10px;
 }
 
@@ -174,7 +175,7 @@ header {
     width: 100%;
     align-items: center;
     text-decoration: none;
-    color: var(--orange);
+    color: var(--green);
     margin: 12px 0;
     cursor: pointer;
     border-bottom: 1px solid #e0cdb8;
@@ -190,7 +191,7 @@ header {
     border-radius: 50%;
     padding: 8px;
     margin-right: 15px;
-    color: var(--orange);
+    color: var(--green);
 }
 
 .sub-menu-link span {
@@ -253,6 +254,15 @@ header {
 
 .register-container {
     display: none;
+}
+
+#terms-conditions label {
+    color: var(--main-color);
+    margin-left: 11px;
+}
+
+#terms-conditions input[type='checkbox'] {
+    margin-bottom: 10px;
 }
 
 .login-container {
@@ -419,11 +429,9 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(8, 60px);
-    grid-gap: 0 0.5em;
     width: 50%;
     height: 100%;
     box-sizing: border-box;
-    padding: 1rem;
     background-color: var(--background-forms);
     align-items: center;
 }
@@ -441,7 +449,6 @@ header {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    gap: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -455,10 +462,16 @@ header {
     grid-area: 8 / 1 / 8 / 3;
 }
 
+#product-selector {
+    width: 90%;
+    margin: 10px;
+}
+
 .input-field-dash {
     font-size: 16px;
     background: var(--background-input);
     color: var(--contrast-color);
+    font-family: var(--font-content);
     height: 50px;
     width: 100%;
     border: none;
@@ -670,7 +683,7 @@ header {
 
 .modal-name h1 {
     text-align: center;
-    color: var(--orange);
+    color: var(--green);
     background-color: white;
     border-radius: 0.5em;
     box-shadow: 21px 4px 12px rgba(0, 0, 0, 0.2);
@@ -894,6 +907,7 @@ header {
     background-color: var(--button-color);
     color: var(--contrast-color);
     padding: 10px 18px;
+    margin-bottom: 10px;
     border: none;
     border-radius: 20px;
     cursor: pointer;
@@ -1027,7 +1041,7 @@ header {
 }
 
 .dropdown-content a {
-    color: var(--orange);
+    color: var(--green);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
